--- a/todor/app/assets/stylesheets/main.css
+++ b/todor/app/assets/stylesheets/main.css
@@ -11,11 +11,19 @@ ul {
 
 body {
   background-color: #96a8b7;
-  width: 1000px;
+/*  width: 1000px;*/
   margin: 0 auto;
 }
 h1 {
   margin-top: 20px;
+  background-color: #4d6477;
+}
+li {
+  display: block;
+  padding: 1em;
+}
+.center {
+  text-align: center;
 }
 #todoList ul {
   list-style: none;
@@ -23,4 +31,16 @@ h1 {
 
 .lineThru{
   text-decoration: line-through;
+}
+.del {
+  text-align: right;
+  margin-left: 20px;
+}
+.title {
+  padding: 20px;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-family: 'IM Fell Great Primer', serif;
+  color: #fff;
 }
